--- a/RegionalText/2020/A2W/GeneralObservations.tex
+++ b/RegionalText/2020/A2W/GeneralObservations.tex
@@ -5,4 +5,7 @@
 \item This year had the first commercial SOK fishery since 2014.
 This presence provided useful information on when to start the 6 day spawn assessment charter.
 
+\item Both Stellar and California sea lions were present.
+The relative abundance of California sea lions has increased in recent years.
+
 \end{itemize}
