--- a/RegionalText/2020/HG/GeneralObservations.tex
+++ b/RegionalText/2020/HG/GeneralObservations.tex
@@ -1,14 +1,17 @@
 \begin{itemize}
 
-\item The dive charter was cancelled due to COVID-19.
-Spawns were assessed using surface surveys and towed video cameras along transects.
+\item Because of COVID-19 restraints, the dive survey was replaced with a surface survey, and the seine charter was extended by 4 days to enhance coverage.
+
+\item All major observed spawns were surveyed this year.
+
+\item Surface spawns used towed video cameras along transects to determine spawn extent and intensity.
 These towed video camera transects were effective for spawn assessments, and may be useful to supplement future dive surveys.
 
-\item Additional Haida Fisheries Program spawn reconnaisance effort helped support the efficiency of surface surveys.
+\item Additional Haida Fisheries Program spawn reconnaisance effort helped support surface surveys.
 
 \item The largest concentration of fish and spawning was around Burnaby Island, and no spawns were observed in the Juan Perez area.
 
-\item Spawn for Skincuttle Island and Burnaby Island seemed about average. 
+\item Spawn for Skincuttle and Burnaby Islands seemed about average.
 
 \item Spawn from Section Cove to Scudder Island did not seem as intense as the past few years, but this year the fish spawned on multiple days on the same beach.
 
@@ -17,6 +20,9 @@ Some samples appeared to have full stomachs.
 Most of the fish seemed to be fairly close to spawning.
 There were very few juvenile fish this year.
 
-\item Prevailing Northwest and Northeast winds kept water temperature between 6.2 and 6.4^\circ\text{C}.
+\item Prevailing Northwest and Northeast winds kept water temperature between 6.2 and 6.4$^\circ\text{C}$.
+
+\item As in previous years, the seine test encountered Humpback whales feeding on herring.
+It was also noted that there has been an increase in the number of Grey Whales feeding on herring spawn over the past 4 years.
 
 \end{itemize}
