--- a/RegionalText/2020/SoG/GeneralObservations.tex
+++ b/RegionalText/2020/SoG/GeneralObservations.tex
@@ -1,5 +1,9 @@
 \begin{itemize}
 
+\item As planned, the assessment program included a seine charter, two dive boats, and a management platform.
+
+\item All major spawns were surveyed, 
+
 \item Spawn in the Strait of Georgia was observed along most of the East coast of Vancouver Island from Shelter Point to Neck Point, and along the East side of Denman and Hornby Islands.
 
 \item Additional spawn was reported in Areas 15, 16, and 18.
@@ -13,5 +17,6 @@ As with recent years, some late spawn was observed around Hornby and Denman Isla
 \item The overall length of spawn observed during the flight program was average when compared with recent years, however a fewer number of flights were conducted.
 
 \item The Strait of Georgia sea lion population during the herring season continues to grow, and impacts the ability to obtain biological samples in some areas and times.
+A small number of Humpback whales were also observed.
 
 \end{itemize}
