--- a/RegionalText/2020/CC/GeneralObservations.tex
+++ b/RegionalText/2020/CC/GeneralObservations.tex
@@ -1,12 +1,19 @@
 \begin{itemize}
 
+\item As planned, two dive charters did the spawn survey this year.
+
+\item Because of limited overflights, dive boats spent a lot of time searching for spawn.
+A small boat charter to map spawns at low tides, like the reconnaissance done in Haida Gwaii, is recommended.
+
+\item Spawns were broadly distributed throughout the area, and all observed spawns were surveyed.
+However, some deep spawn in upper Spiller Channel may have been missed.
+
 \item The SOK fishery was cancelled, but FSC did proceed.
 
 \item Overall it seemed like a better spawn year than last year.
 
 \item Spawn quality in several areas was very good, and was similar to last year.
-For example, divers reported over a dozen layers and spawn at depths beyond where the divers could go.
-A diver reported that the Thompson Bay area had the heaviest spawn on macro that he has ever seen.
+For example, divers reported over a dozen layers of eggs, and spawn at depths beyond where the divers could go.
 
 \item There was spawn in areas that had not spawned much or at all in recent years, such as Stryker Bay, Thompson Bay, and Weeteeum Bay.
 
@@ -14,6 +21,8 @@ A diver reported that the Thompson Bay area had the heaviest spawn on macro that
 
 \item The fish seemed to hold a long time and were not in a hurry to spawn.
 
-\item There was a little more wildlife activity than last season although nothing major.
+\item Macrocystis abundance seemed low this year compared to previous years.
+
+\item There was a little more wildlife activity (such as Humpback whales and sea lions) than last season although nothing major.
 
 \end{itemize}
