Add Puget Sound

--- a/RegionalText/2020/SoG/GeneralObservations.tex
+++ b/RegionalText/2020/SoG/GeneralObservations.tex
@@ -19,4 +19,7 @@ As with recent years, some late spawn was observed around Hornby and Denman Isla
 \item The Strait of Georgia sea lion population during the herring season continues to grow, and impacts the ability to obtain biological samples in some areas and times.
 A small number of Humpback whales were also observed.
 
+\item In Puget Sound, the preliminary estimate of herring spawning biomass is 17,635 tonnes.
+This is the highest biomass since 1980, and is an underestimate because some areas were not surveyed due to COVID-19.
+
 \end{itemize}
