--- a/RegionalText/2020/A2W/GeneralObservations.tex
+++ b/RegionalText/2020/A2W/GeneralObservations.tex
@@ -1,11 +1,11 @@
 \begin{itemize}
 
+\item This year had the first commercial SOK fishery since 2014.
+This fishery provided useful information on when to start the 6 day spawn assessment charter.
+
 \item Spawn seemed to start and stop over a longer period of time than in past years.
 
-\item This year had the first commercial SOK fishery since 2014.
-This presence provided useful information on when to start the 6 day spawn assessment charter.
-
-\item Both Stellar and California sea lions were present.
-The relative abundance of California sea lions has increased in recent years.
+\item Both Stellar and California Sea Lions were present.
+The relative abundance of California Sea Lions seems to have increased in recent years.
 
 \end{itemize}
