--- a/RegionalText/2020/CC/GeneralObservations.tex
+++ b/RegionalText/2020/CC/GeneralObservations.tex
@@ -2,27 +2,27 @@
 
 \item As planned, two dive charters did the spawn survey this year.
 
-\item Because of limited overflights, dive boats spent a lot of time searching for spawn.
-A small boat charter to map spawns at low tides, like the reconnaissance done in Haida Gwaii, is recommended.
-
-\item Spawns were broadly distributed throughout the area, and all observed spawns were surveyed.
-However, some deep spawn in upper Spiller Channel may have been missed.
-
 \item The SOK fishery was cancelled, but FSC did proceed.
+
+\item Because of limited overflights, dive boats spent a lot of time searching for spawn.
+A small boat charter to map spawns at low tides, like the reconnaissance done in Haida Gwaii, is recommended for future surveys.
 
 \item Overall it seemed like a better spawn year than last year.
 
+\item Spawn was broadly distributed throughout the area, and all observed spawns were surveyed.
+However, some deep spawn in upper Spiller Channel may have been missed.
+
 \item Spawn quality in several areas was very good, and was similar to last year.
-For example, divers reported over a dozen layers of eggs, and spawn at depths beyond where the divers could go.
+For example, divers reported over a dozen layers of eggs, and spawn at depths beyond where the divers can survey.
 
 \item There was spawn in areas that had not spawned much or at all in recent years, such as Stryker Bay, Thompson Bay, and Weeteeum Bay.
 
-\item Some areas did not receive a lot of spawn like they did last year (e.g., Norman Morison Bay).
+\item Other areas did not receive a lot of spawn like they did last year, for example Norman Morison Bay.
 
 \item The fish seemed to hold a long time and were not in a hurry to spawn.
 
 \item Macrocystis abundance seemed low this year compared to previous years.
 
-\item There was a little more wildlife activity (such as Humpback whales and sea lions) than last season although nothing major.
+\item There was a little more wildlife activity (such as Humpback Whales and sea lions) than last season.
 
 \end{itemize}
