--- a/RegionalText/2020/HG/GeneralObservations.tex
+++ b/RegionalText/2020/HG/GeneralObservations.tex
@@ -1,19 +1,21 @@
 \begin{itemize}
 
-\item Because of COVID-19 restraints, the dive survey was replaced with a surface survey, and the seine charter was extended by 4 days to enhance coverage.
-
-\item All major observed spawns were surveyed this year.
-
-\item Surface spawns used towed video cameras along transects to determine spawn extent and intensity.
-These towed video camera transects were effective for spawn assessments, and may be useful to supplement future dive surveys.
+\item Because of COVID-19 restraints, the dive survey was replaced with a surface survey, and the seine charter was extended by four days to enhance coverage.
 
 \item Additional Haida Fisheries Program spawn reconnaisance effort helped support surface surveys.
 
-\item The largest concentration of fish and spawning was around Burnaby Island, and no spawns were observed in the Juan Perez area.
+\item All major observed spawns were surveyed this year.
+
+\item Surface spawn surveys used towed video cameras along transects to determine spawn extent and intensity.
+These towed video camera transects were effective for spawn assessments, and may be useful to supplement future dive surveys.
+
+\item The largest concentration of fish and spawning was around Burnaby Island.
+No spawns were observed in the Juan Perez area.
 
 \item Spawn for Skincuttle and Burnaby Islands seemed about average.
 
-\item Spawn from Section Cove to Scudder Island did not seem as intense as the past few years, but this year the fish spawned on multiple days on the same beach.
+\item Spawn from Section Cove to Scudder Island did not seem as intense as the past few years,
+but this year the fish spawned on multiple days on the same beach.
 
 \item Fish seemed smaller this year, and seemed to have less variation in length frequency.
 Some samples appeared to have full stomachs.
@@ -22,7 +24,7 @@ There were very few juvenile fish this year.
 
 \item Prevailing Northwest and Northeast winds kept water temperature between 6.2 and 6.4$^\circ\text{C}$.
 
-\item As in previous years, the seine test encountered Humpback whales feeding on herring.
-It was also noted that there has been an increase in the number of Grey Whales feeding on herring spawn over the past 4 years.
+\item As in previous years, the seine test encountered Humpback Whales feeding on herring.
+There appears to have been an increase in the number of Grey Whales feeding on herring spawn over the past 4 years.
 
 \end{itemize}
