--- a/RegionalText/2020/PRD/GeneralObservations.tex
+++ b/RegionalText/2020/PRD/GeneralObservations.tex
@@ -2,19 +2,17 @@
 
 \item Because of COVID-19 concerns, dive surveys were replaced by surface surveys, and the two seine charters were extended by five days each.
 
-\item All major observed spawns were surveyed this year.
-
-\item Surface surveys are thought to be effective in the Big Bay area where most of the spawn is intertidal.
-However, surface surveys may be less effective in Kitkatla where the bathymetry is steeper.
-
-\item The seine charter was used for both soundings and sampling, as well as tracking spawns.
-Herring were shallower than usual which facilitated sampling.
-
 \item The extended seine charter allowed for coverage of Hunts Inlet.
 
-\item A drone was used to map spawns, which was an effective way to measure spawn lenghts and saved costs for flights.
+\item A drone was used to map spawns, which was effective at measuring spawn lenght and saved costs for flights.
 
-\item Sea surface temperature was lower than last year, between 5 and 6$^\circ\text{C}$.
+\item All major observed spawns were surveyed this year.
+
+\item Surface surveys are thought to be effective in the Big Bay area where most of the spawn is intertidal,
+but may be less effective in Kitkatla where the bathymetry is steeper.
+
+\item The seine charter was used for to sound and take samples, as well as track spawns.
+Herring were shallower than usual which facilitated sampling.
 
 \item In Kitkatla, soundings estimated a similar abundance of fish as last year.
 
@@ -22,15 +20,18 @@ Herring were shallower than usual which facilitated sampling.
 
 \item Spawn was significant and continuous outside of Kitkatla Inlet, from Oval Bay south past Joachin Point.
 
-\item Spot spawn and good presence of fish observed at Willis Bay.
-
-\item Again this year, there was an increase in observed sea lions and whales, though not as many Humpback whales were observed as in recent years.
+\item Substantial spot spawns were observed in Willis Bay.
 
 \item Small fish were observed in test samples throughout the Big Bay area;
 usually small fish are observed in the northern portion of the sampling area.
 
-\item In Big Bay, spawn was more intense and prolonged compared to the last two years which generally had spotty, shorted duration spawns.
+\item In Big Bay, spawn was more intense and prolonged compared to the last two years which generally had spotty, shorter duration spawns.
 
 \item Good spawn was observed from Tree Bluff south to Duncan Bay.
+
+\item Sea surface temperature was lower than last year, between 5 and 6$^\circ\text{C}$.
+
+\item Again this year, there was an increase in observed sea lions and whales,
+though not as many Humpback Whales were observed as in recent years.
 
 \end{itemize}
