--- a/RegionalText/2020/SoG/GeneralObservations.tex
+++ b/RegionalText/2020/SoG/GeneralObservations.tex
@@ -2,22 +2,24 @@
 
 \item As planned, the assessment program included a seine charter, two dive boats, and a management platform.
 
-\item All major spawns were surveyed, 
+\item All major observed spawns were surveyed.
 
-\item Spawn in the Strait of Georgia was observed along most of the East coast of Vancouver Island from Shelter Point to Neck Point, and along the East side of Denman and Hornby Islands.
+\item Overall spawn and fishery timing was average in 2020, with the exception of a late spawn in Sechelt Inlet.
+
+\item The overall length of spawn observed during the flight program was similar to recent years,
+however there were fewer flights this year.
+
+\item Spawn in the Strait of Georgia was observed along most of the East coast of Vancouver Island from Shelter Point to Neck Point, and around Denman and Hornby Islands.
+
+\item Most of the Strait of Georgia spawn was between Qualicum Bay and Cape Lazo, and along the West side of Denman Island.
+As with recent years, some late spawn was observed around Hornby and Denman Islands,
+with the addition of extensive spawn between Blunden Point and Icarus Point near Nanaimo.
 
 \item Additional spawn was reported in Areas 15, 16, and 18.
 Spawn was also reported in Area 17 south (Mudge Island, Cedar, and Yellow Point), a change from an absence in these areas in recent years.
 
-\item Overall spawn and fishery timing was average in 2020, with the exception of a late spawn in Sechelt Inlet.
-
-\item Most of the Strait of Georgia spawn was between Qualicum Bay and Cape Lazo, along the West side of Denman Island.
-As with recent years, some late spawn was observed around Hornby and Denman Islands with the addition of extensive spawn between Blunden Point and Icarus Point near Nanaimo.
-
-\item The overall length of spawn observed during the flight program was average when compared with recent years, however a fewer number of flights were conducted.
-
 \item The Strait of Georgia sea lion population during the herring season continues to grow, and impacts the ability to obtain biological samples in some areas and times.
-A small number of Humpback whales were also observed.
+A small number of Humpback Whales were also observed.
 
 \item In Puget Sound, the preliminary estimate of herring spawning biomass is 17,635 tonnes.
 This is the highest biomass since 1980, and is an underestimate because some areas were not surveyed due to COVID-19.
