--- a/RegionalText/2020/WCVI/GeneralObservations.tex
+++ b/RegionalText/2020/WCVI/GeneralObservations.tex
@@ -2,16 +2,16 @@
 
 \item As planned, the asessment program included seine and dive vessels.
 
-\item All major spawns were surveyed by divers.
+\item All major observed spawns were surveyed by divers.
 Notably, divers surveyed spawn on Bajo Reef during a calm break in the weather.
 However, some minor spawns in Clayoquot Sound were missed.
 
-\item First Nations herring survey staff are able to inform local First Nations of opportunities to place boughs in active spawn areas.
+\item First Nations herring survey staff were able to inform local First Nations of opportunities to place boughs in active spawn areas.
 
-\item Many of the other 2020 WCVI herring spawn events were detected during the 13 reconnaissance flights carried out from February \nth{24} to March \nth{29} in 2020.
-Spawn location information was relayed between First Nations herring charter leaders, reconnaissance flight staff, test-vessel and dive-vessel skippers, to DFO land-based staff during flights to ensure best coverage and recording of spawn areas.
+\item Many of the other 2020 WCVI herring spawn events were detected during the 13 reconnaissance flights between February \nth{24} to March \nth{29}.
+Spawn location information was relayed from First Nations herring charter leaders, reconnaissance flight staff, test vessel and dive vessel skippers to DFO land-based staff during flights to ensure the best coverage and recording of spawn areas.
 
-\item Grey whales were observed feeding on spawn in all major locations, particularly Hesquiaht Harbour as usual.
+\item Grey Whales were observed feeding on spawn in all major locations, particularly Hesquiaht Harbour as usual.
 Some sea lions were also observed.
 
 \end{itemize}
